ide_tail_morning.txt
   64 |   status = napi_add_finalizer(env, obj, data, finalizer, hint, nullptr);
      |                                               ^~~~~~~~~
      |                                               |
      |                                               napi_finalize {aka void (*)(napi_env__*, void*, void*)}
/root/.cache/node-gyp/24.18.0/include/node/js_native_api.h:543:44: note:   initializing argument 4 of ‘napi_status napi_add_finalizer(napi_env, napi_value, void*, node_api_basic_finalize, void*, napi_ref__**)’
  543 |                    node_api_basic_finalize finalize_cb,
      |                    ~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~
../node_modules/node-addon-api/napi-inl.h: In instantiation of ‘napi_status Napi::details::AttachData(napi_env, napi_value, FreeType*, napi_finalize, void*) [with FreeType = Napi::MethodCallbackData<node_kerberos::KerberosServer, Napi::Value (node_kerberos::KerberosServer::*)(const Napi::CallbackInfo&)>; napi_env = napi_env__*; napi_value = napi_value__*; napi_finalize = void (*)(napi_env__*, void*, void*)]’:
../node_modules/node-addon-api/napi-inl.h:3799:41:   required from ‘static void Napi::InstanceWrap<T>::AttachPropData(napi_env, napi_value, const napi_property_descriptor*) [with T = node_kerberos::KerberosServer; napi_env = napi_env__*; napi_value = napi_value__*]’
../node_modules/node-addon-api/napi-inl.h:4211:24:   required from ‘static Napi::Function Napi::ObjectWrap<T>::DefineClass(Napi::Env, const char*, size_t, const napi_property_descriptor*, void*) [with T = node_kerberos::KerberosServer; size_t = long unsigned int]’
../node_modules/node-addon-api/napi-inl.h:4224:21:   required from ‘static Napi::Function Napi::ObjectWrap<T>::DefineClass(Napi::Env, const char*, const std::initializer_list<Napi::ClassPropertyDescriptor<T> >&, void*) [with T = node_kerberos::KerberosServer]’
../src/kerberos.cc:95:20:   required from here
../node_modules/node-addon-api/napi-inl.h:64:47: error: invalid conversion from ‘napi_finalize’ {aka ‘void (*)(napi_env__*, void*, void*)’} to ‘node_api_basic_finalize’ {aka ‘void (*)(const napi_env__*, void*, void*)’} [-fpermissive]
   64 |   status = napi_add_finalizer(env, obj, data, finalizer, hint, nullptr);
      |                                               ^~~~~~~~~
      |                                               |
      |                                               napi_finalize {aka void (*)(napi_env__*, void*, void*)}
/root/.cache/node-gyp/24.18.0/include/node/js_native_api.h:543:44: note:   initializing argument 4 of ‘napi_status napi_add_finalizer(napi_env, napi_value, void*, node_api_basic_finalize, void*, napi_ref__**)’
  543 |                    node_api_basic_finalize finalize_cb,
      |                    ~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~
../node_modules/node-addon-api/napi-inl.h: In instantiation of ‘napi_status Napi::details::AttachData(napi_env, napi_value, FreeType*, napi_finalize, void*) [with FreeType = Napi::AccessorCallbackData<node_kerberos::KerberosServer, Napi::Value (node_kerberos::KerberosServer::*)(const Napi::CallbackInfo&), void (node_kerberos::KerberosServer::*)(const Napi::CallbackInfo&, const Napi::Value&)>; napi_env = napi_env__*; napi_value = napi_value__*; napi_finalize = void (*)(napi_env__*, void*, void*)]’:
../node_modules/node-addon-api/napi-inl.h:3805:41:   required from ‘static void Napi::InstanceWrap<T>::AttachPropData(napi_env, napi_value, const napi_property_descriptor*) [with T = node_kerberos::KerberosServer; napi_env = napi_env__*; napi_value = napi_value__*]’
../node_modules/node-addon-api/napi-inl.h:4211:24:   required from ‘static Napi::Function Napi::ObjectWrap<T>::DefineClass(Napi::Env, const char*, size_t, const napi_property_descriptor*, void*) [with T = node_kerberos::KerberosServer; size_t = long unsigned int]’
../node_modules/node-addon-api/napi-inl.h:4224:21:   required from ‘static Napi::Function Napi::ObjectWrap<T>::DefineClass(Napi::Env, const char*, const std::initializer_list<Napi::ClassPropertyDescriptor<T> >&, void*) [with T = node_kerberos::KerberosServer]’
../src/kerberos.cc:95:20:   required from here
../node_modules/node-addon-api/napi-inl.h:64:47: error: invalid conversion from ‘napi_finalize’ {aka ‘void (*)(napi_env__*, void*, void*)’} to ‘node_api_basic_finalize’ {aka ‘void (*)(const napi_env__*, void*, void*)’} [-fpermissive]
   64 |   status = napi_add_finalizer(env, obj, data, finalizer, hint, nullptr);
      |                                               ^~~~~~~~~
      |                                               |
      |                                               napi_finalize {aka void (*)(napi_env__*, void*, void*)}
/root/.cache/node-gyp/24.18.0/include/node/js_native_api.h:543:44: note:   initializing argument 4 of ‘napi_status napi_add_finalizer(napi_env, napi_value, void*, node_api_basic_finalize, void*, napi_ref__**)’
  543 |                    node_api_basic_finalize finalize_cb,
      |                    ~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~
make: *** [kerberos.target.mk:111: Release/obj.target/kerberos/src/kerberos.o] Error 1
make: *** Waiting for unfinished jobs....
make: Leaving directory '/www/wwwroot/visionlab.ayan24.me/visionlab-ide/lib/vscode/node_modules/kerberos/build'
gyp ERR! build error 
gyp ERR! stack Error: `make` failed with exit code: 2
gyp ERR! stack at ChildProcess.<anonymous> (/usr/local/lib/node_modules/npm/node_modules/node-gyp/lib/build.js:219:23)
gyp ERR! System Linux 6.17.0-1017-aws
gyp ERR! command "/usr/local/bin/node" "/usr/local/lib/node_modules/npm/node_modules/node-gyp/bin/node-gyp.js" "rebuild"
gyp ERR! cwd /www/wwwroot/visionlab.ayan24.me/visionlab-ide/lib/vscode/node_modules/kerberos
gyp ERR! node -v v24.18.0
gyp ERR! node-gyp -v v12.3.0
gyp ERR! $npm_package_name kerberos
gyp ERR! $npm_package_version 2.0.1
gyp ERR! not ok
info Visit https://yarnpkg.com/en/docs/cli/install for documentation about this command.
error Command failed with exit code 1.
info Visit https://yarnpkg.com/en/docs/cli/install for documentation about this command.
